--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ninja-smoothies-tutorial",
+  "name": "finance-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Connor Helsing <conhelsing@gmail.com>",
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "buefy": "^0.6.6",
     "firebase": "^5.3.0",
     "slugify": "^1.3.0",
     "vue": "^2.5.2",
