--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "buefy": "^0.6.6",
     "firebase": "^5.3.0",
+    "moment": "^2.22.2",
     "slugify": "^1.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
