--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "buefy": "^0.6.6",
     "firebase": "^5.3.0",
     "moment": "^2.22.2",
     "slugify": "^1.3.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.1.12"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
