--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "buefy": "^0.6.6",
     "firebase": "^5.3.0",
     "moment": "^2.22.2",
+    "muse-ui": "^3.0.0-rc.7",
+    "semantic-ui-vue": "^0.3.3",
     "slugify": "^1.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
